# PinpadMobile

fclient/app/: build.gradle.kts
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/com/example/fclient/: MainActivity.java  PinpadActivity.java
fclient/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
fclient/app/src/main/res/values/: themes.xml
fclient/gradle/wrapper/: gradle-wrapper.properties
